# ms-deform-attn

./: pyproject.toml  setup.py
.github/workflows/: build.yml
src/: ms_deform_attn.h
src/cuda/: ms_deform_attn_cuda.cu  ms_deform_im2col_cuda.cuh
